--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html>
+
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+
 <head>
-  <title>GbStyling</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Glyphbase</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+
+  <link href="/favicon.png" rel="shortcut icon">
+  <link href="/favicon.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <!-- Bootstrap -->
+<!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="home">
 
-<%= yield %>
+<!--[if lt IE 7]>
+    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+<![endif]-->
+
+  <header class="banner"></header>
+
+  <nav class="nav">
+    <a class='current' href="index.html">
+      <h1 class="nav-brand"></h1>
+    </a>
+    <ul class="nav-links">
+      <li class="nav-link">
+        <a class="nav-linkText" href="#">Signup</a>
+      </li>
+      <li class="nav-link">
+        <a class="nav-linkText" href="#">Login</a>
+      </li>
+    </ul>
+  <div class="nav-mobile-icon"></div>
+  </nav>
+
+  <div class="nav-mobile">
+    <ul class="nav-mobileLinks">
+      <li class="nav-mobileLink">
+        <a class="nav-mobileLinkText">Login</a>
+      </li>    
+      <li class="nav-mobileLink">
+        <a class="nav-mobileLinkText">Signup</a>
+      </li>
+    </ul>
+  </div>
+
+  <%= yield %>
+
+  <footer class="footer">
+      <span class="footer-content">Footer Content</span>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
 
 </body>
 </html>
