--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
-<script src="https://maps.googleapis.com/maps/api/js"></script>
-        <script>
+<% provide(:title, 'Home') %>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script>
     
     function initialize() {
         var mapCanvas = document.getElementById('map-canvas');
@@ -135,14 +136,13 @@
         }
     }
 
-  google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.addDomListener(window, 'load', initialize);
 
-</script>
+  </script>
 
 <section class="map">
   
   <div id="map-canvas"></div>
-
   <a class="button map-addGlyph" href="create.html">Add a Glyph</a>
 
 </section>
