--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,5 @@
 #error_explanation {
-  color: #EE3300;
+  color: #a94442;
   text-align: left;
   ul {
     margin: 0 0 30px 0;
@@ -8,6 +8,7 @@
 
 .field_with_errors {
   .input-text {
-    border-color: #EE3300;
+    border-color: #ffaaaa;
+    background-color: #f2dede;
   }
 }
