--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
   <%= render 'layouts/header' %>
 
   <% flash.each do |message_type, message| %>
-    <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+    <%= content_tag(:div, message, class: "alert alert-dismissable alert-#{message_type}") %>
   <% end %>
 
   <%= yield %>
