--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -3,17 +3,13 @@
 
   <%= render 'shared/error_messages' %>
 
-  <%= f.label :email, class: "input-label" %>
-  <%= f.text_field :email, class: "input-text", placeholder: "example@mail.com" %>
+  <%= f.text_field :email, class: "input-text", placeholder: "Email" %>
 
-  <%= f.label :username, class: "input-label" %>
-  <%= f.text_field :username, class: "input-text", placeholder: "User Name" %>
+  <%= f.text_field :username, class: "input-text", placeholder: "Username" %>
 
-  <%= f.label :password, class: "input-label" %>
   <%= f.password_field :password, class: "input-text", placeholder: "Password" %>
 
-  <%= f.label :password_confirmation, class: "input-label" %>
-  <%= f.password_field :password_confirmation, class: "input-text", placeholder: "Confirm" %>
+  <%= f.password_field :password_confirmation, class: "input-text", placeholder: "Confirm Password" %>
   <br><br>
 
   <section class="action">
