--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,7 @@
   <br>
   <h2 class="homeContent-tagline">Sign Up!</h2>
   <%= render "user_form" %>
+
+  <p>Have an account? <%= link_to "Login here", login_path, class: 'feature-Link' %></p>
 </section>
   
