--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -3,7 +3,7 @@
 
   <%= render 'shared/error_messages' %>
 
-  <%= f.text_field :email, class: "input-text", placeholder: "Email" %>
+  <%= f.email_field :email, class: "input-text", placeholder: "Email" %>
 
   <%= f.text_field :username, class: "input-text", placeholder: "Username" %>
 
