Add password reset and configure SendGrid on Heroku.

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <div>
-      Oops! Looks like there was a small problem with your signup form.
+      Oops! Looks like there was a small problem with your submission.
     </div>
     <ul>
     <% @user.errors.full_messages.each do |msg| %>
