--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,10 @@
   <%= render 'layouts/header' %>
 
   <% flash.each do |message_type, message| %>
-    <%= content_tag(:div, message, class: "alert alert-dismissable alert-#{message_type}") %>
+    <div class="flash-alert flash-alert-dismissable flash-alert-<%= message_type %>">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= message %>
+    </div>
   <% end %>
 
   <%= yield %>
