--- a/app/assets/stylesheets/custom_flash_alerts.css.scss
+++ b/app/assets/stylesheets/custom_flash_alerts.css.scss
@@ -57,7 +57,7 @@
 }
 .flash-alert-warning {
   background-color: #fcf8e3;
-  border-color: black;
+  border-color: #faebcc;
   color: #8a6d3b;
 }
 .flash-alert-warning hr {
@@ -68,7 +68,7 @@
 }
 .flash-alert-danger {
   background-color: #f2dede;
-  border-color: black;
+  border-color: #ebccd1;
   color: #a94442;
 }
 .flash-alert-danger hr {
