--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,7 @@
   <h2 class="homeContent-tagline">Reset Password</h2>
   <%= form_for(@user, url: password_reset_path(params[:id]), html: { class: 'login-form' }) do |f| %>
 
-    <%= render 'shared/error_messages' %>
+    <%= render 'shared/error_messages', object: f.object %>
 
     <%= hidden_field_tag :email, @user.email %>
     <%= f.password_field :password, class: "input-text", placeholder: "Password" %>
