--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,7 +1,7 @@
 
 <%= form_for @user, role: "form" do |f| %>
 
-  <%= render 'shared/error_messages' %>
+  <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.email_field :email, class: "input-text", placeholder: "Email" %>
 
