--- a/app/views/glyphs/edit.html.erb
+++ b/app/views/glyphs/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Add a Glyph') %>
+<% provide(:title, "Editing #{@glyph.title}") %>
 <section class="glyphHeader-create">
 </section>
 
