--- a/app/views/glyphs/show.html.erb
+++ b/app/views/glyphs/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Glyphbase | #{@glyph.title}') %>
+<% provide(:title, @glyph.title) %>
 <section class="glyphHeader-image"></section>
 
 <section class="glyphSidebar">
