Move javascript for maps into its own module.  Add maps to homepage and new/show views for glyphs.

--- a/app/views/glyphs/new.html.erb
+++ b/app/views/glyphs/new.html.erb
@@ -17,3 +17,9 @@
 </section>
 
 <%= render "glyph_form" %>
+
+<script>
+  $(document).ready(function() {
+      Glyphbase.Maps.initialize();
+  });
+</script>
