--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,143 +1,8 @@
 <% provide(:title, 'Home') %>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script>
-    
-    function initialize() {
-        var mapCanvas = document.getElementById('map-canvas');
-       
-        var mapOptions = {
-            disableDefaultUI: true,
-            scrollwheel: false,
-            draggable: false,
-            center: new google.maps.LatLng(37.794108,-122.39511),
-            zoom: 16,
-            mapTypeId: google.maps.MapTypeId.ROADMAP,
-            styles: [
-              {
-                "elementType": "labels",
-                "stylers": [
-                  { "visibility": "off" }
-                ]
-              },{
-                "featureType": "administrative",
-                "elementType": "labels",
-                "stylers": [
-                  { "visibility": "on" }
-                ]
-              },{
-                "featureType": "road",
-                "elementType": "labels",
-                "stylers": [
-                  { "visibility": "on" }
-                ]
-              },{
-                "featureType": "transit",
-                "elementType": "labels",
-                "stylers": [
-                  { "visibility": "on" }
-                ]
-              },{
-                "featureType": "poi.park",
-                "stylers": [
-                  { "hue": "#22ff00" },
-                  { "saturation": -48 },
-                  { "lightness": -10 }
-                ]
-              }
-            ]
-        }
-
-        function template(title, author, highlight) {
-            var fakeTemplate="";
-                fakeTemplate += "<a class=\"map-link\" href=\"single.html\">";
-                fakeTemplate += "<aside class=\"map-itemImage\"><\/aside>";
-                fakeTemplate += "<section class=\"map-itemContent\">";
-                fakeTemplate += "<span class=\"map-itemTitle\">" + title + "<\/span>";
-                fakeTemplate += "<span class=\"map-itemCreator\">" + author + "<\/span>";
-                fakeTemplate += "<span class=\"map-itemInfo\">" + highlight + "<\/span>";
-                fakeTemplate += "<\/section>";
-                fakeTemplate += "<\/a>";
-            return fakeTemplate;
-        };
-
-        var lastSelectedMarker;
-        var location = [
-            {
-                x: 37.794108,
-                y: -122.39511,
-                title: "Under GG Bridge",
-                author: "Thomas Drach",
-                highlight: "This spot is so friggen sick, I can't believe it"
-            },             
-            {
-                x: 37.794118,
-                y: -122.39899,
-                title: "AT&T Park Ledge",
-                author: "Thomas Drach",
-                highlight: "Don't shoot the gap."
-            },             
-            {
-                x: 37.794198,
-                y: -122.38990,
-                title: "By the Bay",
-                author: "Chris Rhoton",
-                highlight: "This spot is so friggen sick, I can't believe it"
-            },             
-            {
-                x: 37.791118,
-                y: -122.38990,
-                title: "The Park",
-                author: "Thomas Drach",
-                highlight: "Don't shoot the gap."
-            },            
-            {
-                x: 37.794013,
-                y: -122.39811,
-                title: "Fidi Spot",
-                author: "Chris Rhoton",
-                highlight: "Check out this crazy ledge, be careful though."
-            }
-        ];
-
-        function glyph(x, y, title, author, highlight) {
-            this.xLoc = x;
-            this.yLoc = y;
-            this.title = title;
-            this.author = author;
-            this.highlight = highlight;
-            this.googleMarker = function() {
-                var markerTemplate = template(this.title, this.author, this.highlight);
-                var m = new google.maps.Marker({
-                    map:       map,
-                    animation: google.maps.Animation.DROP,
-                    title:     this.title,
-                    position:  new google.maps.LatLng(this.xLoc, this.yLoc),
-                    html:     markerTemplate,
-                    icon: "<%= asset_path 'mapLocation.svg' %>",
-                    optimized: false 
-                });
-                var infowindow = new google.maps.InfoWindow({
-                    content: markerTemplate,
-                    maxWidth: 300
-                });
-                google.maps.event.addListener(m, 'click', function() {
-                    if(lastSelectedMarker) lastSelectedMarker.close(); // Close last marker if one was opened
-                    infowindow.open(map, this);
-                    lastSelectedMarker = infowindow;
-                });
-            };
-        };
-
-        var map = new google.maps.Map(mapCanvas, mapOptions);
-
-        for (var i=0; i<location.length; i++) {
-            var newLocation = new glyph(location[i].x, location[i].y, location[i].title, location[i].author, location[i].highlight);
-                newLocation.googleMarker();
-        }
-    }
-
-    google.maps.event.addDomListener(window, 'load', initialize);
-
+    $(document).ready(function() {
+        Glyphbase.Maps.initialize();
+    });
   </script>
 
 <section class="map">
