Add basic geolocation module.  Add lat/long when creating new glyph and change homepage to render map centered on user's location.

--- a/app/views/glyphs/_glyph_form.html.erb
+++ b/app/views/glyphs/_glyph_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(@glyph, html: { multipart: true }, role: "form") do |f| %>
+  <%= f.hidden_field :latitude, value: 0.0 %>
+  <%= f.hidden_field :longitude, value: 0.0 %>
 <section class="glyphInfo create">
   <%= render 'shared/error_messages', object: f.object %>
   <header class="glyphInfo-text">
