--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,15 @@
 
 <section class="map">
   
-  <div id="map-canvas"></div>
+  <div id="map-canvas">
+    <div class="spinner">
+      <div class="rect1"></div>
+      <div class="rect2"></div>
+      <div class="rect3"></div>
+      <div class="rect4"></div>
+      <div class="rect5"></div>
+    </div>
+  </div>
   <a class="button map-addGlyph" href="create.html">Add a Glyph</a>
 
 </section>
