--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,13 @@
 <% provide(:title, 'Home') %>
   <script>
     $(document).ready(function() {
+      var initialized = false;
       Glyphbase.Geo.trackPosition(function(latitude, longitude) {
         var center = new google.maps.LatLng(latitude, longitude);
-        Glyphbase.Maps.initialize('map-canvas', 16, center);
+        if(!initialized) {
+          initialized = true;
+          Glyphbase.Maps.initialize('map-canvas', 16, center);
+        }
       });
     });
   </script>
