--- a/app/views/glyphs/new.html.erb
+++ b/app/views/glyphs/new.html.erb
@@ -26,6 +26,7 @@
       var $lngText      = $('.lng-inline');
       var $latToServer  = $('#glyph_latitude');
       var $lngToServer  = $('#glyph_longitude');
+      var marker;
 
       $latText.text(latitude.toFixed(4));
       $lngText.text(longitude.toFixed(4));
@@ -34,7 +35,12 @@
       if(!initialized) {
         var center = new google.maps.LatLng(latitude, longitude);
         initialized = true;
-        Glyphbase.Maps.initialize('map-canvas', 16, center);
+        Glyphbase.Maps.initialize('map-canvas', 18, center);
+        marker = Glyphbase.Maps.addMarker(latitude, longitude);
+        Glyphbase.Maps.centerOnMarker(marker);
+      } else if (marker) {
+        marker.setPosition(new google.maps.LatLng(latitude, longitude));
+        Glyphbase.Maps.centerOnMarker(marker);
       }
     });
   });
