--- a/app/assets/stylesheets/spinner.css
+++ b/app/assets/stylesheets/spinner.css
@@ -24,12 +24,19 @@ https://github.com/tobiasahlin/SpinKit
 */
 
 .spinner {
-  padding-top: 100px;
   margin: 0 auto 0 auto;
   width: 50px;
   height: 30px;
   text-align: center;
   font-size: 10px;
+}
+
+.large-top-padding {
+  padding-top: 100px;
+}
+
+.small-top-padding {
+  padding-top: 40%;
 }
 
 .spinner > div {
