--- a/app/views/glyphs/show.html.erb
+++ b/app/views/glyphs/show.html.erb
@@ -3,7 +3,15 @@
 
 <section class="glyphSidebar">
   <div class="glyphSidebar-location">
-    <div id="map-canvas" class="single"></div>
+    <div id="map-canvas" class="single">
+      <div class="spinner small-top-padding">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+      </div>
+    </div>
   </div>
 </section>
 
