--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@
 <section class="map">
   
   <div id="map-canvas">
-    <div class="spinner">
+    <div class="spinner large-top-padding">
       <div class="rect1"></div>
       <div class="rect2"></div>
       <div class="rect3"></div>
