Disable image upload button after file is selected.

--- a/app/views/glyphs/_glyph_form.html.erb
+++ b/app/views/glyphs/_glyph_form.html.erb
@@ -43,6 +43,7 @@
     }
     if(this.files[0]) {
       $(this).closest('.input-textboxAction--photo').addClass('has-file');
+      $("#glyph_image_attachment").prop('disabled', true);
     }
   });
 </script>
