Change 'Add a Glyph' button on homepage to link to new glyph path.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,7 +23,7 @@
       <div class="rect5"></div>
     </div>
   </div>
-  <a class="button map-addGlyph" href="create.html">Add a Glyph</a>
+  <%= link_to "Add a Glyph", new_glyph_path, class: "button map-addGlyph" %>
 
 </section>
 
