--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,7 @@
         if(!initialized) {
           initialized = true;
           Glyphbase.Maps.initialize('map-canvas', 16, center);
+          Glyphbase.Glyphs.displayNearby(latitude, longitude);
         }
       });
     });
