--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="//use.typekit.net/wmy7jqv.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <script src="http://maps.google.com/maps/api/js?key=<%= MAPS_API_KEY %>" type="text/javascript">
+  <script src="https://maps.google.com/maps/api/js?key=<%= MAPS_API_KEY %>" type="text/javascript">
   </script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
