--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -509,7 +509,7 @@ sub {
   height: 70vh;
   background: image-url("parkour.jpg") no-repeat center;
   background-size: cover;
-  overflow-x: hidden; }
+  overflow: hidden; }
   .glyphHeader-image::after {
     content: "";
     width: 100%;
@@ -931,6 +931,10 @@ sub {
   left: 0;
   border-radius: 4px 0 0 4px; }
 
+.map-itemImage > img {
+  width: 100%;
+  height: 100%;
+}
 .map-itemContent {
   font-family: "pt-sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
   text-align: left;
