--- a/app/views/glyphs/_glyph_form.html.erb
+++ b/app/views/glyphs/_glyph_form.html.erb
@@ -9,7 +9,12 @@
 </section>
 
 <section class="glyphContent">
-  <span class="action-primary addHeader">Add Header Image</span>
+  <div class="action-primary addHeader">
+    Add Header Image
+    <div class="fileButtonWrapper">
+      <%= f.file_field :header_image, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
+    </div>
+  </div>
   <label class="input-label">Glyph Information</label>
   <%= f.text_field :tagline, class: "input-text", placeholder: "What's the best part about this spot?", required: true %>
   <%= f.text_area :content, class: "input-textbox", placeholder: "Give some details and things you think are important. You can also add photos and video.", required: true %>
@@ -43,7 +48,16 @@
     }
     if(this.files[0]) {
       $(this).closest('.input-textboxAction--photo').addClass('has-file');
-      // $("#glyph_image_attachment").prop('disabled', true);
+    }
+  });
+
+  $('#glyph_header_image').bind('change', function() {
+    size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+    if(this.files[0]) {
+      $('.addHeader').css('border-color', '#494947');
     }
   });
 </script>
